# BLE_kardio

./: .clang-format  .clang-tidy  .gitignore  README.md  Start_VS_Code.bat  west.yml
.west/: config
app/: CMakeLists.txt  CMakePresets.json  debug.conf  prj.conf
app/boards/: esp32_devkitc.overlay  native_sim.conf
app/include/BLE/: ble_advertising.h  ble_init.h  ble_log.h  ble_manager.h
app/include/BLE/GATT/: gatt_services.h  hrs.h  spo2.h
app/include/simulator/: spo2_simulator.h
app/include/zbus/: zbus_channels.h
app/src/: main.c
app/src/BLE/: ble_advertising.c  ble_init.c  ble_log.c  ble_manager.c  ble_rand.c
app/src/BLE/GATT/: gatt_services.c  hrs.c  spo2.c
app/src/simulator/: spo2_simulator.c
app/src/zbus/: zbus_channels.c
zephyr/: module.yml
